updated to DSL2

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,10 +2,17 @@ manifest {
     mainScript = 'main.nf'
 }
 
+params {
+    reads = ''
+    adapt = ''
+    db = ''
+    scaf_len = ''
+    outdir = ''
+    memory = 
+}
+
 profiles {
     standard {
         process.executor = 'local'
-	    process.cpus = params.cpu
-	    process.memory = params.mem
 }
 }
