--- a/nextflow.config
+++ b/nextflow.config
@@ -1,18 +1,29 @@
+cleanup = true
+docker {
+    enabled = true
+}
+
 manifest {
     mainScript = 'main.nf'
 }
 
 params {
-    reads = ''
-    adapt = ''
-    db = ''
-    scaf_len = ''
-    outdir = ''
-    memory = 
+    reads = '/path_to_folder/*_{R1,R2}.fastq.gz'
+    adapt = './module/adapter_sequences.fasta'
+    diamond_db = '/path_to_folder/nr.dmnd'
+    krona_db = '/path_to_folder/Krona-master/KronaTools/taxonomy'
+    scaf_len = '400'
+    outdir = '/output_folder/'
+    cpus = 12
 }
 
 profiles {
     standard {
         process.executor = 'local'
+        executor.cpus = 50
+	executor.maxForks = 10
+	executor.memory = '500 GB' 
 }
+
 }
+
