--- a/nextflow.config
+++ b/nextflow.config
@@ -9,9 +9,8 @@ manifest {
 
 params {
     reads = '/path_to_folder/*_{R1,R2}.fastq.gz'
-    adapt = './module/adapter_sequences.fasta'
+    adapt = './bin/adapter_sequences.fasta'
     diamond_db = '/path_to_folder/nr.dmnd'
-    krona_db = '/path_to_folder/Krona-master/KronaTools/taxonomy'
     scaf_len = '400'
     outdir = '/output_folder/'
     cpus = 12
