--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,7 @@
 cleanup = true
-docker {
+conda {
     enabled = true
+    runOptions = '-u 979'
 }
 
 manifest {
@@ -8,21 +9,27 @@ manifest {
 }
 
 params {
-    reads = '/path_to_folder/*_{R1,R2}.fastq.gz'
+    reads = './test/*{R1,R2}.fastq.gz'
     adapt = './bin/adapter_sequences.fasta'
-    diamond_db = '/path_to_folder/nr.dmnd'
-    scaf_len = '400'
-    outdir = '/output_folder/'
-    cpus = 12
+    diamond_db = './refseq_protein.dmnd'
+    outdir = './test/results/'
 }
 
 profiles {
-    standard {
-        process.executor = 'local'
-        executor.cpus = 50
-	executor.maxForks = 10
-	executor.memory = '500 GB' 
+   standard {
+        process {
+            withLabel: high_cpu {
+              executor = 'local'     // Specifies the executor
+              cpus = 5               // Number of CPUs allocated per process
+              memory = '200 GB'      // Memory allocated per process
+              maxForks = 5           // Maximum number of processes that can run in parallel
+            }
+            withLabel: low_cpu {
+              executor = 'local'     // Specifies the executor
+              cpus = 1               // Number of CPUs allocated per process
+              memory = '16 GB'       // Memory allocated per process
+              maxForks = 1           // Maximum number of processes that can run in parallel
+            }        
+        }
+    }
 }
-
-}
-
